# ArchiFarm-Scaffolding

./: README.md  compose.yml  start.sh  stop.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
archifarm-core/artefact-store/: README.md  compose.yml
archifarm-core/experiment-management-cli/: .env.sample  .gitignore  .python-version  README.md  install.sh  main.py  pyproject.toml  requirements.txt
archifarm-core/experiment-management-cli/src/: exports.py  form_processor.py  inputs.py
archifarm-core/experiment-management-cli/templates/: form_config.toml
archifarm-core/experiment-management-dashboard/: README.md
archifarm-core/telemetry-collector/: README.md  compose.yml  docker-compose.yml  prometheus.yml
archifarm-core/testbed-management-dashboard/: README.md
archifarm-core/testbed-status-dashboard/: README.md  compose.yml
archifarm-core/testbed-status-dashboard/grafana/dashboards/: cadvisor-dashboard.json
archifarm-core/workflow-engine/: .env  .gitignore  README.md  compose.yml  start.sh
archifarm-core/workflow-engine/workflows/: Default Workflow.json
experiment-tools/context-parameter-controllers/: .dockerignore  .python-version  Dockerfile  README.md  main.py  pyproject.toml  tool_server.py
experiment-tools/context-parameter-controllers/app/api/: routes.py
experiment-tools/context-parameter-controllers/app/core/: config.py
experiment-tools/context-parameter-controllers/app/models/: context_request.py  tool_request.py
experiment-tools/context-parameter-controllers/app/tools/: __init__.py  base.py  compute_tool.py  network_tool.py
experiment-tools/prototyping-tools/: .gitignore  .python-version  Dockerfile  README.md  main.py  prototyping_server.py  pyproject.toml
experiment-tools/prototyping-tools/app/api/: routes.py
experiment-tools/prototyping-tools/app/core/: config.py
experiment-tools/prototyping-tools/app/models/: tool_request.py
experiment-tools/prototyping-tools/app/tools/: __init__.py  base.py  blockchain_tool.py  compute_tool.py  network_tool.py
