[tool.poetry]
name = "prototyping-tools"
version = "0.1.0"
description = "FastAPI application for prototyping tools"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">3.9,<4.0"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
gunicorn = "^22.0.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.4.0"
loguru = "^0.7.2"
motor = "^3.6.0"
python-multipart = "^0.0.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
